package com.main.entities;


public enum Especialidad {
    MECANICA_GENERAL,
    ELECTRICIDAD,
    PLANCHADO,
    PINTURA,
    TRANSMISION,
    SUSPENSION,
    MOTORES
}